@@ -1,3 +1,15 @@
+2005-10-13 Niklas Knutsson  <nq@altern.org>
+
+	* Fortnight unit
+	* More composite units for convenience
+	* Foot-Candle unit
+	* Fix conversion footcandle <-> lux
+	* Einstein unit
+
+2005-10-11 Niklas Knutsson  <nq@altern.org>
+
+	* More composite units for convenience (km, mm, ml, km/h, etc.)
+
 2005-10-08 Niklas Knutsson  <nq@altern.org>
 
 	* Move currency definitions to currencies.xml
